# detectron2

./: .gitignore  .~compare_partial_global.xlsx  compare_partial_global.xlsx  compare_partial_global1.xlsx  data.csv  data.xlsx
configs/: Base-RCNN-FPN.yaml
demo/: __init__.py  compare_predict_with_instances.py  compare_predict_with_instances_all_hands.py  compare_predict_with_instances_all_hands_merge_lr.py  draw_instance_on_image.py  keypoints_names.py  mydemo-detection.py  mydemo.py  mydemo_head_down_top_head.py  mydemo_left_down_right_foot.py  mydemo_left_down_right_head.py  mydemo_left_up_left_foot.py  mydemo_merge_all_hand.py  mydemo_merge_all_hand_merge_lr_label.py  mydemo_middle_down_left_hand.py  mydemo_middle_down_right_hand.py  mydemo_middle_up_face.py  mydemo_middle_up_right_hand.py  predictor.py  re_process.py  save_kp_json.py  whole_part_kp_predictor.py
my_train_predict/: my_predict_detection.py  my_predict_eval.py  my_predict_person_zhengfan.py  my_predict_test.py  my_predict_train.py  my_predict_video.py  my_train.py  my_train_keypoint.py
my_utils/: a.out  analyze_model.py  cal_anchor.py  cal_image_shape.py  cal_keypoints_sigmas.py  change_rec.py  coco2yolo.py  compare_predict_with_trainsample.py  create_leg_shape.py  crop_img.py  del_js_imgdata.py  gausiion_fillter.py  get_hand_roi.cpp  get_hand_roi.cpp.bak  hand_roi.py  hand_roi_kinect.py  keypoint_names.txt  labelme2coco_hrnet.py  labelme2coco_multi_label.py  labelme2coco_new-l.py  labelme2coco_new-multikp.py  (+14 more)
output_model/: CMakeLists.txt  model.txt  runtime.py  torchscript_keypoint_rcnn.cpp
(+50 files in other folders)
